tests/build/fail/widget/remove_wrong_separator.stderr
error: expected `;`
 --> $DIR/remove_wrong_separator.rs:8:34
  |
8 |         remove { background_color, padding }
  |                                  ^
